// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{#each} indent 0 failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 0, got 4 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#each} indent 0 success 1`] = `Array []`;

exports[`{#each} indent 0 text failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 0, got 4 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#each} indent 0 text success 1`] = `Array []`;

exports[`{#each} indent 4 failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 4, got 0 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#each} indent 4 multiple success 1`] = `Array []`;

exports[`{#each} indent 4 success 1`] = `Array []`;

exports[`{#each} indent 4 text failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 4, got 0 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#each} indent 4 text success 1`] = `Array []`;

exports[`{#if} indent 0 failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 0, got 4 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#if} indent 0 success 1`] = `Array []`;

exports[`{#if} indent 0 text failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 0, got 4 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#if} indent 0 text success 1`] = `Array []`;

exports[`{#if} indent 4 failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 4, got 0 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#if} indent 4 multiple success 1`] = `Array []`;

exports[`{#if} indent 4 success 1`] = `Array []`;

exports[`{#if} indent 4 text failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 4, got 0 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`{#if} indent 4 text success 1`] = `Array []`;
